--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
-  <title> </title>
-<head>
-<body>
-<h1>teste </h1>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../portfolio/css/style.css">
+  <!-- CSS Bootstrap v5 Resources -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
+  integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <title>Portfolio</title>
+</head>
+<body class="$blue-900">
+  <div class="container bg-primary">
+    hushusdhushuhsd
+  </div>
+  
+
+
+  <!-- JS Bootstrap v5 Resources -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" 
+  integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
