--- a/index.html
+++ b/index.html
@@ -5,20 +5,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../portfolio/css/style.css">
-  <!-- CSS Bootstrap v5 Resources -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
-  integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <title>Portfolio</title>
 </head>
-<body class="$blue-900">
-  <div class="container bg-primary">
-    hushusdhushuhsd
-  </div>
+<body>
+  <header>
+    <div class="menu">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </header>
   
 
-
-  <!-- JS Bootstrap v5 Resources -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" 
-  integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+  <footer>
+    <svg xmlns="assets/images/layout/wave.svg" viewBox="0 0 1440 400">
+      <path fill="#0099ff" fill-opacity="1" d="M0,224L60,229.3C120,235,240,245,360,218.7C480,192,600,128,720,128C840,128,960,192,1080,218.7C1200,245,1320,235,1380,229.3L1440,224L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path>
+    </svg>
+    <div class="container about">
+      <h3>About</h3>
+      <p>about</p>
+    </div>
+    <div class="container">
+      <h3>huhauhash</h3>
+      <p>about</p>
+    </div>
+  </footer>
 </body>
 </html>
