--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../portfolio/css/style.css">
+  <!-- Font Awesome v5.0 -->
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+  integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <title>Portfolio</title>
 </head>
 <body>
@@ -20,16 +23,17 @@
   
 
   <footer>
-    <svg xmlns="assets/images/layout/wave.svg" viewBox="0 0 1440 400">
-      <path fill="#0099ff" fill-opacity="1" d="M0,224L60,229.3C120,235,240,245,360,218.7C480,192,600,128,720,128C840,128,960,192,1080,218.7C1200,245,1320,235,1380,229.3L1440,224L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path>
-    </svg>
-    <div class="container about">
-      <h3>About</h3>
-      <p>about</p>
-    </div>
-    <div class="container">
-      <h3>huhauhash</h3>
-      <p>about</p>
+    <div class="container-footer">
+      <div class="Contact">
+        <h3>Contact me</h3>
+      </div>
+      <div class="social-media">
+        <h3>Social Medias</h3>
+        <div class="social-icons">
+          <a href="#"><i class="fab fa-github fa-2x"></i></a>
+          <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+        </div>
+      </div>
     </div>
   </footer>
 </body>
