--- a/index.html
+++ b/index.html
@@ -4,37 +4,107 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../portfolio/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <!-- Font Awesome v5.0 -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
   integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+  <!-- Bootstrap 5 CSS-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
+  rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <title>Portfolio</title>
 </head>
 <body>
   <header>
-    <div class="menu">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </div>
+    <ul class="nav justify-content-center">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Skills</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contact</a>
+      </li>
+    </ul>
   </header>
-  
 
-  <footer>
-    <div class="container-footer">
-      <div class="Contact">
-        <h3>Contact me</h3>
+    <div class="container-fluid container-title">
+        <h2> Felipe França </h2>
+      <h3>Web Developer</h3>
+      <h3>DevOps</h3>
+    </div>
+
+    <div class="rgb-effect"></div>
+
+    <div class="container-fluid container-skills">
+      <h2>Skills</h2>
+      <!-- Web Dev -->
+      <div class="container">
+        <h3>Web Developer</h3>
+        <div class="row justify-content-start">
+          <div class="col-2">
+            <h3>HTML5</h3>
+            <i class="fab fa-html5 fa-5x"></i>
+            <p>Intermediate</p>
+          </div>
+          <div class="col-2">
+            <h3>CSS3</h3>
+            <i class="fab fa-css3-alt fa-5x"></i>
+          </div>
+          <div class="col-2">
+            <h3>Javascript</h3>
+            <i class="fab fa-js-square fa-5x"></i>
+          </div>
+          <div class="col-2">
+            <h3>Typescript</h3>
+            <div class="typescript-logo"></div>
+          </div>
+          <div class="col-2">
+            <h3>Angular</h3>
+            <i class="fab fa-angular fa-5x"></i>
+          </div>
+          <div class="col-2">
+            <h3>Bootstrap</h3>
+            <i class="fab fa-bootstrap fa-5x"></i>
+          </div>
+        </div>
       </div>
-      <div class="social-media">
-        <h3>Social Medias</h3>
-        <div class="social-icons">
-          <a href="#"><i class="fab fa-github fa-2x"></i></a>
-          <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+      <!-- DevOps -->
+      <div class="container">
+        <h3>DevOps</h3>
+        <div class="row justify-content-start">
+          <div class="col-2">
+            <h3>Amazon Web Services</h3>
+            <i class="fab fa-aws fa-5x"></i>
+            <p>Intermediate</p>
+          </div>
+          <div class="col-2">
+            <h3>CSS3</h3>
+            <i class="fab fa-css3-alt fa-5x"></i>
+          </div>
+          <div class="col-2">
+            <h3>Javascript</h3>
+            <i class="fab fa-js-square fa-5x"></i>
+          </div>
+          <div class="col-2">
+            <h3>Typescript</h3>
+            <div class="typescript-logo"></div>
+          </div>
+          <div class="col-2">
+            <h3>Angular</h3>
+            <i class="fab fa-angular fa-5x"></i>
+          </div>
+          <div class="col-2">
+            <h3>Bootstrap</h3>
+            <i class="fab fa-bootstrap fa-5x"></i>
+          </div>
         </div>
       </div>
     </div>
-  </footer>
+
+
+  <!-- Bootstrap 5 JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
