--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="container-fluid container-title">
         <h2> Felipe França </h2>
-      <h3>Web Developer</h3>
+      <h3>DataOps</h3>
       <h3>DevOps</h3>
     </div>
 
